--- a/themes/ockupy.gg/layouts/partials/featured-columns.html
+++ b/themes/ockupy.gg/layouts/partials/featured-columns.html
@@ -5,7 +5,7 @@
         <div class="featured-columns_text">
           <h2 class="title">Impressions that actually impress</h2>
           <p>
-            How many of your impressions are served to screens where users are ignoring your ad? Your message is being lost in ever growing newsfeeds, a blur as users scroll past.
+            How many of your impressions are served to screens where users are ignoring your ad? Your message is being lost in ever-growing newsfeeds, a blur as users scroll past.
             <br><br>
             Gain more valuable impressions and greater brand lift through Twitch streamers.
           </p>
@@ -16,7 +16,7 @@
           <i class="far fa-circle"></i>
           <div class="media-body">
             <h5>On-Screen Placements</h5>
-            Display your brand assets on-screen on-screen for the full duration of a broadcast. We aren't talking some 3 second pre-roll ad. Your brand will be visible for an entire streaming session, which for most broadcasters is a minimum of two hours.
+            Display your brand assets on-screen for the full duration of a broadcast. We aren't talking about some 3 second pre-roll ad. Your brand will be visible for an entire streaming session; which, for most broadcasters, is a minimum of two hours.
           </div>
         </div>
         <div class="media">
