Placement section added

--- a/themes/ockupy.gg/layouts/partials/scripts.html
+++ b/themes/ockupy.gg/layouts/partials/scripts.html
@@ -19,3 +19,8 @@ setTimeout(function(){
     minutes.innerHTML = 106;
 }, 1000);
 </script>
+<script type="text/javascript">
+$(document).ready(function(){
+$('[data-toggle="popover"]').popover();
+});
+</script>
