--- a/themes/ockupy.gg/layouts/index.html
+++ b/themes/ockupy.gg/layouts/index.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 {{ partial "hero.html" . }}
 {{ partial "featured-columns.html" . }}
+{{ partial "placements.html" . }}
 {{ partial "clients.html" . }}
 {{ partial "services.html" . }}
 {{ partial "contact.html" . }}
