--- a/themes/ockupy.gg/static/css/style.css
+++ b/themes/ockupy.gg/static/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300|Changa+One');
-
-h1,h2,h3,h4,h5 {
+h1, h2, h3, h4, h5 {
   font-family: 'Changa One', sans-serif;
 }
 
@@ -17,7 +16,7 @@ h2 {
 }
 
 a, a:hover {
-  color:#05f1ff;
+  color: #05f1ff;
 }
 
 .title::after {
@@ -26,13 +25,13 @@ a, a:hover {
   left: 0;
   right: 0;
   height: 1px;
-  background:#ff015b;
-  width:5rem;
-  margin:1rem auto;
+  background: #ff015b;
+  width: 5rem;
+  margin: 1rem auto;
 }
 
 section {
-  padding:5rem 1rem;
+  padding: 5rem 1rem;
 }
 
 .container {
@@ -40,42 +39,41 @@ section {
 }
 
 .btn-primary, .btn-primary:hover {
-    color: #fff;
-    background: #ff015b;
-    border-color: #ff015b;
-    font-family: 'Changa One', sans-serif;
+  color: #fff;
+  background: #ff015b;
+  border-color: #ff015b;
+  font-family: 'Changa One', sans-serif;
 }
-
 
 .btn-secondary, .btn-secondary:hover {
-    color: #00fe82;
-    background: #3d0341;
-    border-color: #3d0341;
-    font-family: 'Changa One', sans-serif;
+  color: #00fe82;
+  background: #3d0341;
+  border-color: #3d0341;
+  font-family: 'Changa One', sans-serif;
 }
 
-
 .form-inline button {
-  margin-left:5px;
+  margin-left: 5px;
 }
 
 /**************
 ## Header
 **************/
+
 @media only screen and (max-width: 991px) {
   .navbar-collapse {
-      position: absolute;
-      top: 56px;
-      left: -15px;
-      background: #000;
-      width: calc(100% + 30px);
-      z-index: 10;
+    position: absolute;
+    top: 56px;
+    left: -15px;
+    background: #000;
+    width: calc(100% + 30px);
+    z-index: 10;
   }
-
   .nav-item {
     padding: 1rem 2rem;
   }
 }
+
 /**************
 ## Hero
 **************/
@@ -84,46 +82,46 @@ section {
   background-color: #00fe82;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%2300fe82' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%2300f395' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%2300e7a7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%2300dab7' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%2300ccc4' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%2300bfcf' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%2300b0d6' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%2300a2d9' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%230093d7' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%230084d2' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%230075c8' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%230065bb' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%230055ab' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23004598' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23243683' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2337266d' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%233d1557' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%233d0341' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
   background-size: cover;
-  margin-top:-56px; /* for transparent nav */
+  margin-top: -56px;
+  /* for transparent nav */
   display: flex;
   align-items: center;
-  height:500px;
+  height: 500px;
 }
 
 .jumbotron {
-  background-color: rgba(0,0,0,0);
-  color:#fff;
+  background-color: rgba(0, 0, 0, 0);
+  color: #fff;
   margin: 0 auto;
   width: 100%;
 }
 
-.hero button {
+.hero button {}
 
-}
 /**************
 ## Featured Columns
 
 **************/
 
 .featured-columns {
- background-image: linear-gradient(to top, #210024, #27032b, #2e0432, #35043a, #3d0341);
- color:#fff;
+  background-image: linear-gradient(to top, #210024, #27032b, #2e0432, #35043a, #3d0341);
+  color: #fff;
 }
 
 .featured-columns .title::after {
-  margin:1rem 0;
+  margin: 1rem 0;
 }
 
 .featured-columns .right {
- background: #210024;
+  background: #210024;
   border-radius: 5px;
-  color:#fff;
-  padding:2rem 2rem 0 2rem;
-  box-shadow: 0px 25px 40px rgba(0,0,0,0.12);
+  color: #fff;
+  padding: 2rem 2rem 0 2rem;
+  box-shadow: 0px 25px 40px rgba(0, 0, 0, 0.12);
 }
 
 .featured-columns .media {
-  margin-bottom:2rem;
+  margin-bottom: 2rem;
 }
 
 .featured-columns .svg-inline--fa {
@@ -135,6 +133,115 @@ section {
 }
 
 /**************
+## Placements
+**************/
+
+.placements {
+  background-color: #210024;
+  position: relative;
+}
+
+.btn-ad {
+  background: #00fe82;
+  border-color: #00fe82;
+  border-width: 2px;
+  color: #210024;
+  -webkit-box-shadow: 0 0 0 0 rgba(#73feba, .5);
+          box-shadow: 0 0 0 0 rgba(#73feba, .5);
+  -webkit-animation: pulse 1.5s ease infinite;
+          animation: pulse 1.5s ease infinite;
+}
+
+.btn-ad:hover, .btn-ad:not(:disabled):not(.disabled):active {
+  background: #00fe82;
+  border-color: #00fe82;
+  color: #210024;
+}
+
+.btn-ad:not(:disabled):not(.disabled):active:focus, .show>.btn-ad.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(115,254,186,.5);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(.9);
+            transform: scale(.9);
+  }
+  70% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: 0 0 0 50px rgba(#73feba, 0);
+            box-shadow: 0 0 0 50px rgba(#73feba, 0);
+  }
+    100% {
+    -webkit-transform: scale(.9);
+            transform: scale(.9);
+    -webkit-box-shadow: 0 0 0 0 rgba(#73feba, 0);
+            box-shadow: 0 0 0 0 rgba(#73feba, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(.9);
+            transform: scale(.9);
+  }
+  70% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: 0 0 0 50px rgba(#73feba, 0);
+            box-shadow: 0 0 0 50px rgba(#73feba, 0);
+  }
+    100% {
+    -webkit-transform: scale(.9);
+            transform: scale(.9);
+    -webkit-box-shadow: 0 0 0 0 rgba(#73feba, 0);
+            box-shadow: 0 0 0 0 rgba(#73feba, 0);
+  }
+}
+
+a#video-ad {
+  position: absolute;
+  top: 40%;
+  left: 40%;
+}
+
+a#chat-ad {
+  position: absolute;
+  top: 40%;
+  left: 73%;
+}
+
+a#info-ad {
+  position: absolute;
+  top: 67%;
+  left: 40%;
+}
+
+a#panel-ad {
+  position: absolute;
+  top: 78%;
+  left: 25%;
+}
+
+.popover {
+  background:#333;
+  color:#fff;
+  border:none;
+}
+
+.arrow {
+  height:0;
+}
+
+.popover-header {
+  background:#ff015b;
+}
+
+.popover-body {
+  color:#fff;
+}
+
+/**************
 ## Clients
 **************/
 
@@ -142,19 +249,18 @@ section {
   background-color: #210024;
 }
 
-
 .clients .container {
   background-color: #210024;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%233d0341' stroke-width='4.1' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .clients .container {
-  color:#fff;
+  color: #fff;
 }
 
 .clients h2 {
   text-align: center;
-  margin-bottom:2rem;
+  margin-bottom: 2rem;
 }
 
 .clients figure {
@@ -168,8 +274,9 @@ section {
 /**************
 ## Services
 **************/
+
 .services {
-  color:#fff;
+  color: #fff;
   background-color: #210024;
 }
 
@@ -180,16 +287,16 @@ section {
 
 .services h2 {
   text-align: center;
-  margin-bottom:2rem;
+  margin-bottom: 2rem;
 }
 
 .services h5 {
-  color:#00fe82;
+  color: #00fe82;
 }
 
 .services .col-sm-4 {
-  padding:1rem;
-  margin-bottom:2rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
 }
 
 .by-the-numbers {
@@ -201,27 +308,30 @@ section {
 /**************
 ## Contact
 **************/
+
 .contact {
   background-image: linear-gradient(to bottom, #210024, #27032b, #2e0432, #35043a, #3d0341);
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .contact h2 {
   margin-bottom: 2rem;
-  color:#fff;
+  color: #fff;
 }
 
 .contact h2.title::after {
-  margin:1rem 0;
+  margin: 1rem 0;
 }
+
 .contact .form-wrap {
-  max-width:500px;
-  margin:0 auto;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .contact p {
-  color:#fff;
+  color: #fff;
 }
 
 /**************
@@ -229,33 +339,32 @@ section {
 **************/
 
 .footer {
-   background: #3D0341;
-   color:#fff;
-   padding:1rem 1rem
+  background: #3D0341;
+  color: #fff;
+  padding: 1rem 1rem
 }
 
 .footer a {
-   color: #00FE82;
+  color: #00FE82;
 }
 
 .footer ul {
   list-style: none;
-  padding:0;
+  padding: 0;
 }
 
 .footer .row .row {
-  margin:0;
+  margin: 0;
 }
 
 .footer .form-control {
-  width:50%;
+  width: 50%;
 }
 
-@media (min-width:992px){
+@media (min-width:992px) {
   section {
-    padding:8rem 1rem;
+    padding: 8rem 1rem;
   }
-
   .hero {
     min-height: 80vh;
   }
