Placement section fixes

--- a/themes/ockupy.gg/layouts/partials/placements.html
+++ b/themes/ockupy.gg/layouts/partials/placements.html
@@ -2,7 +2,7 @@
   <div class="container" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
     <img src="/img/placements.svg" alt="">
   </div>
-  <a tabindex="0" id="video-ad" class="btn btn-lg btn-ad d-none d-md-block" data-toggle="popover" data-trigger="focus" data-container="body" data-placement="top" title="In-Stream Placements" data-content="We offer a range of different in-stream ad placements including the broadcaster's background, their equipment, and even as a stream overlay."><i class="fas fa-plus"></i></a>
+  <a tabindex="0" id="video-ad" class="btn btn-lg btn-ad d-none d-md-block" data-toggle="popover" data-trigger="focus" data-container="body" data-placement="top" title="In-Stream Placements" data-content="We offer a range of different in-stream ad placements including the broadcaster's background, their equipment, and even stream overlays."><i class="fas fa-plus"></i></a>
 
   <a tabindex="0" id="chat-ad" class="btn btn-lg btn-ad d-none d-md-block" data-toggle="popover" data-trigger="focus" data-container="body" data-placement="left" title="Chatbox Placements" data-content="Immerse your brand into Twitch's most active community feature. We offer branded emojis, !bang operations, and bot interactions."><i class="fas fa-plus"></i></a>
 
